--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Locale-Maketext-TieHash-L10N
-version: 0.09
+version: 0.10
 author:
   - 'Steffen Winkler <steffenw at cpan.org>'
 abstract: 'Locale::Maketext::TieHash::L10N - Tying language handle to a hash'
@@ -11,6 +11,8 @@ requires:
   Params::Validate: 0
 build_requires:
   Locale::Maketext: 1.06
+  Test::Exception: 0
+  Test::NoWarnings: 0
   Test::Simple: 0
 recommends:
   Test::More: 0
@@ -19,8 +21,8 @@ recommends:
 provides:
   Locale::Maketext::TieHash::L10N:
     file: lib/Locale/Maketext/TieHash/L10N.pm
-    version: 0.09
-generated_by: Module::Build version 0.2808
+    version: 0.10
+generated_by: Module::Build version 0.33
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
