--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Locale-Maketext-TieHash-L10N
-version: 0.10
+version: 0.11
 author:
   - 'Steffen Winkler <steffenw at cpan.org>'
 abstract: 'Locale::Maketext::TieHash::L10N - Tying language handle to a hash'
@@ -9,6 +9,7 @@ resources:
   license: http://dev.perl.org/licenses/
 requires:
   Params::Validate: 0
+  perl: 5.006001
 build_requires:
   Locale::Maketext: 1.06
   Test::Exception: 0
@@ -21,7 +22,7 @@ recommends:
 provides:
   Locale::Maketext::TieHash::L10N:
     file: lib/Locale/Maketext/TieHash/L10N.pm
-    version: 0.10
+    version: 0.11
 generated_by: Module::Build version 0.33
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
